syntax = "proto3";

option java_multiple_files = true;
option java_package = "fr.polytech.polystore.gateway.service";
option java_outer_classname = "InventoryServiceProto";

package inventory_service;

service InventoryService {
  rpc CreateStock (StockGRPC) returns (StockGRPC);
  rpc GetStock (GetStockRequestGRPC) returns (StockGRPC);
  rpc GetAllStocks (GetAllStocksRequestGRPC) returns (GetAllStocksResponseGRPC);
}

message GetStockRequestGRPC {
  string id = 1;
}

message GetAllStocksRequestGRPC {}

message GetAllStocksResponseGRPC {
  repeated StockGRPC stocks = 1;
}

message StockGRPC {
  string id = 1;
  double price = 2;
  int32 quantity = 3;
}
